# anki-scroll

./: .env  .gitignore  AGENTS.md  pyproject.toml
src/anki_scroll/: __init__.py  api.py  llms.py  services.py  simple_services.py  sql_service.py
src/anki_scroll/service/: card_generation.py  website_query.py
src/anki_scroll/webapp/: __init__.py  app.py  codex_instructions.txt
src/anki_scroll/webapp/static/css/: base.css
src/anki_scroll/webapp/templates/: base.html  create_spec.html  deck.html  home.html  select.html
tests/: test_api.py  test_simple_services.py  test_sql_service.py  test_webapp.py
